Fix x overflow

--- a/themes/opentermsarchive/assets/css/components/textContent/textContent.css
+++ b/themes/opentermsarchive/assets/css/components/textContent/textContent.css
@@ -1,6 +1,7 @@
 .textContent {
   border:1Px solid var(--colorBlack200);
   padding:var(--mL);
+  overflow-x: hidden;
 
   & hr {
     clear: both;
@@ -191,12 +192,11 @@
 
   & pre{
     padding:0.8rem;
+    overflow-x: scroll;
   }
 
   & code {
     background-color: var(--colorBlack200);
-    white-space: pre-wrap;
-    word-break: break-word;
     font-size: 0.95em;
   }
 
